parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    BARRA
    BEGIN
    BREAK
    CASE
    CHOMP
    CLASS
    COMENTARIO
    COMENTARIO_MULTI
    COMILLA_D
    COMILLA_S
    CONCAT
    CORCHETE_DER
    CORCHETE_IZ
    DEFINED_QUESTION
    EACH
    ENSURE
    EXCLAMACION_ALTO
    EXCLAMACION_BAJO
    FALSE
    FOR
    IGUAL_DOBLEP
    IN
    MODULE
    NEXT
    NIL
    NOT
    O_SIGNO
    PORCENTAJE
    PREGUNTA
    PRINTF
    RAISE
    REDO
    RESCUE
    RETRY
    RETURN
    SELF
    SIMBOLO
    SUPER
    TRUE
    UNTIL
    VARIABLECLASE
    WHILE
    YIELD
    Y_SIGNO

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> operacionAritmetica
Rule 2     cuerpo -> asignacion
Rule 3     cuerpo -> impresion
Rule 4     cuerpo -> impresion_vacia
Rule 5     cuerpo -> expresiones_booleanas
Rule 6     cuerpo -> solicitudDatosTeclado
Rule 7     cuerpo -> hashes
Rule 8     cuerpo -> estructura_if
Rule 9     cuerpo -> funciones
Rule 10    cuerpo -> funcionesEstructuras
Rule 11    valorNumerico -> FLOTANTE
Rule 12    valorNumerico -> ENTERO
Rule 13    soloEnteros -> ENTERO
Rule 14    operadores -> MAS
Rule 15    operadores -> MENOS
Rule 16    operadores -> DIVISION
Rule 17    operadores -> MULTIPLICACION
Rule 18    operadores -> EXPONENCIACION
Rule 19    operadores -> MODULO
Rule 20    expresionNumerica -> valorNumerico
Rule 21    expresionNumerica -> operacionAritmetica
Rule 22    expresionNumerica -> PARENTESIS_IZ operacionAritmetica PARENTESIS_DER
Rule 23    operacionAritmetica -> expresionNumerica operadores expresionNumerica
Rule 24    impresion -> PRINT PARENTESIS_IZ expresionNumerica PARENTESIS_DER
Rule 25    impresion -> PRINT PARENTESIS_IZ VARIABLE PARENTESIS_DER
Rule 26    asignacion -> VARIABLE IGUAL expresionNumerica
Rule 27    asignacion -> VARIABLE IGUAL CADENA
Rule 28    asignacion -> VARIABLE IGUAL hashes
Rule 29    rangos -> PARENTESIS_IZ soloEnteros TRES_PUNTOS soloEnteros PARENTESIS_DER
Rule 30    impresion_vacia -> PRINT PARENTESIS_IZ PARENTESIS_DER
Rule 31    impresion_vacia -> PUTS PARENTESIS_IZ PARENTESIS_DER
Rule 32    impresion_vacia -> PUTS
Rule 33    operadoresComparacion -> DOBLE_IGUAL
Rule 34    operadoresComparacion -> DIFERENTE
Rule 35    operadoresComparacion -> MAYOR_QUE
Rule 36    operadoresComparacion -> MENOR_QUE
Rule 37    operadoresComparacion -> MENOR_IGUAL_QUE
Rule 38    operadoresComparacion -> MAYOR_IGUAL_QUE
Rule 39    funcionesComparacion -> AND
Rule 40    funcionesComparacion -> OR
Rule 41    expresiones_booleanas -> valorNumerico operadoresComparacion valorNumerico
Rule 42    expresiones_booleanas -> rangos TRIPLE_IGUAL ENTERO
Rule 43    expresiones_booleanas -> VARIABLE operadoresComparacion VARIABLE
Rule 44    expresiones_booleanas -> VARIABLE operadoresComparacion valorNumerico
Rule 45    expresiones_booleanas -> valorNumerico operadoresComparacion VARIABLE
Rule 46    solicitudDatosTeclado -> GETS
Rule 47    funciones -> DEF VARIABLE PARENTESIS_IZ PARENTESIS_DER END
Rule 48    funciones -> DEF VARIABLE PARENTESIS_IZ argumentos PARENTESIS_DER END
Rule 49    funcionesArray -> SORT
Rule 50    funcionesNumeros -> TO_F
Rule 51    funcionesEstructuras -> VARIABLE PUNTO funcionesArray
Rule 52    funcionesEstructuras -> VARIABLE PUNTO funcionesNumeros
Rule 53    argumentos -> VARIABLE
Rule 54    argumentos -> VARIABLE COMA argumentos
Rule 55    condicionIf -> expresiones_booleanas
Rule 56    condicionIf -> expresiones_booleanas funcionesComparacion expresiones_booleanas
Rule 57    estructura_if -> IF condicionIf declaracion ELSE declaracion END
Rule 58    estructura_if -> IF condicionIf declaracion estructura_secundaria_if
Rule 59    estructura_secundaria_if -> ELSEIF condicionIf declaracion ELSE declaracion END
Rule 60    estructura_secundaria_if -> ELSEIF condicionIf declaracion estructura_secundaria_if
Rule 61    declaracion -> operacionAritmetica
Rule 62    declaracion -> asignacion
Rule 63    declaracion -> impresion
Rule 64    declaracion -> impresion_vacia
Rule 65    declaracion -> expresiones_booleanas
Rule 66    declaracion -> solicitudDatosTeclado
Rule 67    declaracion -> hashes
Rule 68    declaracion -> estructura_if
Rule 69    hashes -> LLAVE_IZ elemento_hash LLAVE_DER
Rule 70    claveValor -> VARIABLE ASIGNA_HASH valorNumerico
Rule 71    claveValor -> VARIABLE ASIGNA_HASH CADENA
Rule 72    elemento_hash -> claveValor
Rule 73    elemento_hash -> claveValor COMA claveValor

Terminals, with rules where they appear

ALIAS                : 
AND                  : 39
ASIGNA_HASH          : 70 71
BARRA                : 
BEGIN                : 
BREAK                : 
CADENA               : 27 71
CASE                 : 
CHOMP                : 
CLASS                : 
COMA                 : 54 73
COMENTARIO           : 
COMENTARIO_MULTI     : 
COMILLA_D            : 
COMILLA_S            : 
CONCAT               : 
CORCHETE_DER         : 
CORCHETE_IZ          : 
DEF                  : 47 48
DEFINED_QUESTION     : 
DIFERENTE            : 34
DIVISION             : 16
DOBLE_IGUAL          : 33
EACH                 : 
ELSE                 : 57 59
ELSEIF               : 59 60
END                  : 47 48 57 59
ENSURE               : 
ENTERO               : 12 13 42
EXCLAMACION_ALTO     : 
EXCLAMACION_BAJO     : 
EXPONENCIACION       : 18
FALSE                : 
FLOTANTE             : 11
FOR                  : 
GETS                 : 46
IF                   : 57 58
IGUAL                : 26 27 28
IGUAL_DOBLEP         : 
IN                   : 
LLAVE_DER            : 69
LLAVE_IZ             : 69
MAS                  : 14
MAYOR_IGUAL_QUE      : 38
MAYOR_QUE            : 35
MENOR_IGUAL_QUE      : 37
MENOR_QUE            : 36
MENOS                : 15
MODULE               : 
MODULO               : 19
MULTIPLICACION       : 17
NEXT                 : 
NIL                  : 
NOT                  : 
OR                   : 40
O_SIGNO              : 
PARENTESIS_DER       : 22 24 25 29 30 31 47 48
PARENTESIS_IZ        : 22 24 25 29 30 31 47 48
PORCENTAJE           : 
PREGUNTA             : 
PRINT                : 24 25 30
PRINTF               : 
PUNTO                : 51 52
PUTS                 : 31 32
RAISE                : 
REDO                 : 
RESCUE               : 
RETRY                : 
RETURN               : 
SELF                 : 
SIMBOLO              : 
SORT                 : 49
SUPER                : 
TO_F                 : 50
TRES_PUNTOS          : 29
TRIPLE_IGUAL         : 42
TRUE                 : 
UNTIL                : 
VARIABLE             : 25 26 27 28 43 43 44 45 47 48 51 52 53 54 70 71
VARIABLECLASE        : 
WHILE                : 
YIELD                : 
Y_SIGNO              : 
error                : 

Nonterminals, with rules where they appear

argumentos           : 48 54
asignacion           : 2 62
claveValor           : 72 73 73
condicionIf          : 57 58 59 60
cuerpo               : 0
declaracion          : 57 57 58 59 59 60
elemento_hash        : 69
estructura_if        : 8 68
estructura_secundaria_if : 58 60
expresionNumerica    : 23 23 24 26
expresiones_booleanas : 5 55 56 56 65
funciones            : 9
funcionesArray       : 51
funcionesComparacion : 56
funcionesEstructuras : 10
funcionesNumeros     : 52
hashes               : 7 28 67
impresion            : 3 63
impresion_vacia      : 4 64
operacionAritmetica  : 1 21 22 61
operadores           : 23
operadoresComparacion : 41 43 44 45
rangos               : 42
solicitudDatosTeclado : 6 66
soloEnteros          : 29 29
valorNumerico        : 20 41 41 44 45 70

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . operacionAritmetica
    (2) cuerpo -> . asignacion
    (3) cuerpo -> . impresion
    (4) cuerpo -> . impresion_vacia
    (5) cuerpo -> . expresiones_booleanas
    (6) cuerpo -> . solicitudDatosTeclado
    (7) cuerpo -> . hashes
    (8) cuerpo -> . estructura_if
    (9) cuerpo -> . funciones
    (10) cuerpo -> . funcionesEstructuras
    (23) operacionAritmetica -> . expresionNumerica operadores expresionNumerica
    (26) asignacion -> . VARIABLE IGUAL expresionNumerica
    (27) asignacion -> . VARIABLE IGUAL CADENA
    (28) asignacion -> . VARIABLE IGUAL hashes
    (24) impresion -> . PRINT PARENTESIS_IZ expresionNumerica PARENTESIS_DER
    (25) impresion -> . PRINT PARENTESIS_IZ VARIABLE PARENTESIS_DER
    (30) impresion_vacia -> . PRINT PARENTESIS_IZ PARENTESIS_DER
    (31) impresion_vacia -> . PUTS PARENTESIS_IZ PARENTESIS_DER
    (32) impresion_vacia -> . PUTS
    (41) expresiones_booleanas -> . valorNumerico operadoresComparacion valorNumerico
    (42) expresiones_booleanas -> . rangos TRIPLE_IGUAL ENTERO
    (43) expresiones_booleanas -> . VARIABLE operadoresComparacion VARIABLE
    (44) expresiones_booleanas -> . VARIABLE operadoresComparacion valorNumerico
    (45) expresiones_booleanas -> . valorNumerico operadoresComparacion VARIABLE
    (46) solicitudDatosTeclado -> . GETS
    (69) hashes -> . LLAVE_IZ elemento_hash LLAVE_DER
    (57) estructura_if -> . IF condicionIf declaracion ELSE declaracion END
    (58) estructura_if -> . IF condicionIf declaracion estructura_secundaria_if
    (47) funciones -> . DEF VARIABLE PARENTESIS_IZ PARENTESIS_DER END
    (48) funciones -> . DEF VARIABLE PARENTESIS_IZ argumentos PARENTESIS_DER END
    (51) funcionesEstructuras -> . VARIABLE PUNTO funcionesArray
    (52) funcionesEstructuras -> . VARIABLE PUNTO funcionesNumeros
    (20) expresionNumerica -> . valorNumerico
    (21) expresionNumerica -> . operacionAritmetica
    (22) expresionNumerica -> . PARENTESIS_IZ operacionAritmetica PARENTESIS_DER
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO
    (29) rangos -> . PARENTESIS_IZ soloEnteros TRES_PUNTOS soloEnteros PARENTESIS_DER

    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 14
    PUTS            shift and go to state 16
    GETS            shift and go to state 20
    LLAVE_IZ        shift and go to state 21
    IF              shift and go to state 22
    DEF             shift and go to state 23
    PARENTESIS_IZ   shift and go to state 15
    FLOTANTE        shift and go to state 24
    ENTERO          shift and go to state 19

    cuerpo                         shift and go to state 1
    operacionAritmetica            shift and go to state 2
    asignacion                     shift and go to state 3
    impresion                      shift and go to state 4
    impresion_vacia                shift and go to state 5
    expresiones_booleanas          shift and go to state 6
    solicitudDatosTeclado          shift and go to state 7
    hashes                         shift and go to state 8
    estructura_if                  shift and go to state 9
    funciones                      shift and go to state 10
    funcionesEstructuras           shift and go to state 11
    expresionNumerica              shift and go to state 12
    valorNumerico                  shift and go to state 17
    rangos                         shift and go to state 18

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> operacionAritmetica .
    (21) expresionNumerica -> operacionAritmetica .

    $end            reduce using rule 1 (cuerpo -> operacionAritmetica .)
    MAS             reduce using rule 21 (expresionNumerica -> operacionAritmetica .)
    MENOS           reduce using rule 21 (expresionNumerica -> operacionAritmetica .)
    DIVISION        reduce using rule 21 (expresionNumerica -> operacionAritmetica .)
    MULTIPLICACION  reduce using rule 21 (expresionNumerica -> operacionAritmetica .)
    EXPONENCIACION  reduce using rule 21 (expresionNumerica -> operacionAritmetica .)
    MODULO          reduce using rule 21 (expresionNumerica -> operacionAritmetica .)


state 3

    (2) cuerpo -> asignacion .

    $end            reduce using rule 2 (cuerpo -> asignacion .)


state 4

    (3) cuerpo -> impresion .

    $end            reduce using rule 3 (cuerpo -> impresion .)


state 5

    (4) cuerpo -> impresion_vacia .

    $end            reduce using rule 4 (cuerpo -> impresion_vacia .)


state 6

    (5) cuerpo -> expresiones_booleanas .

    $end            reduce using rule 5 (cuerpo -> expresiones_booleanas .)


state 7

    (6) cuerpo -> solicitudDatosTeclado .

    $end            reduce using rule 6 (cuerpo -> solicitudDatosTeclado .)


state 8

    (7) cuerpo -> hashes .

    $end            reduce using rule 7 (cuerpo -> hashes .)


state 9

    (8) cuerpo -> estructura_if .

    $end            reduce using rule 8 (cuerpo -> estructura_if .)


state 10

    (9) cuerpo -> funciones .

    $end            reduce using rule 9 (cuerpo -> funciones .)


state 11

    (10) cuerpo -> funcionesEstructuras .

    $end            reduce using rule 10 (cuerpo -> funcionesEstructuras .)


state 12

    (23) operacionAritmetica -> expresionNumerica . operadores expresionNumerica
    (14) operadores -> . MAS
    (15) operadores -> . MENOS
    (16) operadores -> . DIVISION
    (17) operadores -> . MULTIPLICACION
    (18) operadores -> . EXPONENCIACION
    (19) operadores -> . MODULO

    MAS             shift and go to state 26
    MENOS           shift and go to state 27
    DIVISION        shift and go to state 28
    MULTIPLICACION  shift and go to state 29
    EXPONENCIACION  shift and go to state 30
    MODULO          shift and go to state 31

    operadores                     shift and go to state 25

state 13

    (26) asignacion -> VARIABLE . IGUAL expresionNumerica
    (27) asignacion -> VARIABLE . IGUAL CADENA
    (28) asignacion -> VARIABLE . IGUAL hashes
    (43) expresiones_booleanas -> VARIABLE . operadoresComparacion VARIABLE
    (44) expresiones_booleanas -> VARIABLE . operadoresComparacion valorNumerico
    (51) funcionesEstructuras -> VARIABLE . PUNTO funcionesArray
    (52) funcionesEstructuras -> VARIABLE . PUNTO funcionesNumeros
    (33) operadoresComparacion -> . DOBLE_IGUAL
    (34) operadoresComparacion -> . DIFERENTE
    (35) operadoresComparacion -> . MAYOR_QUE
    (36) operadoresComparacion -> . MENOR_QUE
    (37) operadoresComparacion -> . MENOR_IGUAL_QUE
    (38) operadoresComparacion -> . MAYOR_IGUAL_QUE

    IGUAL           shift and go to state 32
    PUNTO           shift and go to state 34
    DOBLE_IGUAL     shift and go to state 35
    DIFERENTE       shift and go to state 36
    MAYOR_QUE       shift and go to state 37
    MENOR_QUE       shift and go to state 38
    MENOR_IGUAL_QUE shift and go to state 39
    MAYOR_IGUAL_QUE shift and go to state 40

    operadoresComparacion          shift and go to state 33

state 14

    (24) impresion -> PRINT . PARENTESIS_IZ expresionNumerica PARENTESIS_DER
    (25) impresion -> PRINT . PARENTESIS_IZ VARIABLE PARENTESIS_DER
    (30) impresion_vacia -> PRINT . PARENTESIS_IZ PARENTESIS_DER

    PARENTESIS_IZ   shift and go to state 41


state 15

    (22) expresionNumerica -> PARENTESIS_IZ . operacionAritmetica PARENTESIS_DER
    (29) rangos -> PARENTESIS_IZ . soloEnteros TRES_PUNTOS soloEnteros PARENTESIS_DER
    (23) operacionAritmetica -> . expresionNumerica operadores expresionNumerica
    (13) soloEnteros -> . ENTERO
    (20) expresionNumerica -> . valorNumerico
    (21) expresionNumerica -> . operacionAritmetica
    (22) expresionNumerica -> . PARENTESIS_IZ operacionAritmetica PARENTESIS_DER
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO

    ENTERO          shift and go to state 45
    PARENTESIS_IZ   shift and go to state 42
    FLOTANTE        shift and go to state 24

    operacionAritmetica            shift and go to state 43
    soloEnteros                    shift and go to state 44
    expresionNumerica              shift and go to state 12
    valorNumerico                  shift and go to state 46

state 16

    (31) impresion_vacia -> PUTS . PARENTESIS_IZ PARENTESIS_DER
    (32) impresion_vacia -> PUTS .

    PARENTESIS_IZ   shift and go to state 47
    $end            reduce using rule 32 (impresion_vacia -> PUTS .)
    ELSE            reduce using rule 32 (impresion_vacia -> PUTS .)
    ELSEIF          reduce using rule 32 (impresion_vacia -> PUTS .)
    END             reduce using rule 32 (impresion_vacia -> PUTS .)


state 17

    (41) expresiones_booleanas -> valorNumerico . operadoresComparacion valorNumerico
    (45) expresiones_booleanas -> valorNumerico . operadoresComparacion VARIABLE
    (20) expresionNumerica -> valorNumerico .
    (33) operadoresComparacion -> . DOBLE_IGUAL
    (34) operadoresComparacion -> . DIFERENTE
    (35) operadoresComparacion -> . MAYOR_QUE
    (36) operadoresComparacion -> . MENOR_QUE
    (37) operadoresComparacion -> . MENOR_IGUAL_QUE
    (38) operadoresComparacion -> . MAYOR_IGUAL_QUE

    MAS             reduce using rule 20 (expresionNumerica -> valorNumerico .)
    MENOS           reduce using rule 20 (expresionNumerica -> valorNumerico .)
    DIVISION        reduce using rule 20 (expresionNumerica -> valorNumerico .)
    MULTIPLICACION  reduce using rule 20 (expresionNumerica -> valorNumerico .)
    EXPONENCIACION  reduce using rule 20 (expresionNumerica -> valorNumerico .)
    MODULO          reduce using rule 20 (expresionNumerica -> valorNumerico .)
    DOBLE_IGUAL     shift and go to state 35
    DIFERENTE       shift and go to state 36
    MAYOR_QUE       shift and go to state 37
    MENOR_QUE       shift and go to state 38
    MENOR_IGUAL_QUE shift and go to state 39
    MAYOR_IGUAL_QUE shift and go to state 40

    operadoresComparacion          shift and go to state 48

state 18

    (42) expresiones_booleanas -> rangos . TRIPLE_IGUAL ENTERO

    TRIPLE_IGUAL    shift and go to state 49


state 19

    (12) valorNumerico -> ENTERO .

    DOBLE_IGUAL     reduce using rule 12 (valorNumerico -> ENTERO .)
    DIFERENTE       reduce using rule 12 (valorNumerico -> ENTERO .)
    MAYOR_QUE       reduce using rule 12 (valorNumerico -> ENTERO .)
    MENOR_QUE       reduce using rule 12 (valorNumerico -> ENTERO .)
    MENOR_IGUAL_QUE reduce using rule 12 (valorNumerico -> ENTERO .)
    MAYOR_IGUAL_QUE reduce using rule 12 (valorNumerico -> ENTERO .)
    MAS             reduce using rule 12 (valorNumerico -> ENTERO .)
    MENOS           reduce using rule 12 (valorNumerico -> ENTERO .)
    DIVISION        reduce using rule 12 (valorNumerico -> ENTERO .)
    MULTIPLICACION  reduce using rule 12 (valorNumerico -> ENTERO .)
    EXPONENCIACION  reduce using rule 12 (valorNumerico -> ENTERO .)
    MODULO          reduce using rule 12 (valorNumerico -> ENTERO .)
    $end            reduce using rule 12 (valorNumerico -> ENTERO .)
    PARENTESIS_DER  reduce using rule 12 (valorNumerico -> ENTERO .)
    ELSE            reduce using rule 12 (valorNumerico -> ENTERO .)
    ELSEIF          reduce using rule 12 (valorNumerico -> ENTERO .)
    END             reduce using rule 12 (valorNumerico -> ENTERO .)
    AND             reduce using rule 12 (valorNumerico -> ENTERO .)
    OR              reduce using rule 12 (valorNumerico -> ENTERO .)
    VARIABLE        reduce using rule 12 (valorNumerico -> ENTERO .)
    PRINT           reduce using rule 12 (valorNumerico -> ENTERO .)
    PUTS            reduce using rule 12 (valorNumerico -> ENTERO .)
    GETS            reduce using rule 12 (valorNumerico -> ENTERO .)
    LLAVE_IZ        reduce using rule 12 (valorNumerico -> ENTERO .)
    IF              reduce using rule 12 (valorNumerico -> ENTERO .)
    PARENTESIS_IZ   reduce using rule 12 (valorNumerico -> ENTERO .)
    FLOTANTE        reduce using rule 12 (valorNumerico -> ENTERO .)
    ENTERO          reduce using rule 12 (valorNumerico -> ENTERO .)
    COMA            reduce using rule 12 (valorNumerico -> ENTERO .)
    LLAVE_DER       reduce using rule 12 (valorNumerico -> ENTERO .)


state 20

    (46) solicitudDatosTeclado -> GETS .

    $end            reduce using rule 46 (solicitudDatosTeclado -> GETS .)
    ELSE            reduce using rule 46 (solicitudDatosTeclado -> GETS .)
    ELSEIF          reduce using rule 46 (solicitudDatosTeclado -> GETS .)
    END             reduce using rule 46 (solicitudDatosTeclado -> GETS .)


state 21

    (69) hashes -> LLAVE_IZ . elemento_hash LLAVE_DER
    (72) elemento_hash -> . claveValor
    (73) elemento_hash -> . claveValor COMA claveValor
    (70) claveValor -> . VARIABLE ASIGNA_HASH valorNumerico
    (71) claveValor -> . VARIABLE ASIGNA_HASH CADENA

    VARIABLE        shift and go to state 52

    elemento_hash                  shift and go to state 50
    claveValor                     shift and go to state 51

state 22

    (57) estructura_if -> IF . condicionIf declaracion ELSE declaracion END
    (58) estructura_if -> IF . condicionIf declaracion estructura_secundaria_if
    (55) condicionIf -> . expresiones_booleanas
    (56) condicionIf -> . expresiones_booleanas funcionesComparacion expresiones_booleanas
    (41) expresiones_booleanas -> . valorNumerico operadoresComparacion valorNumerico
    (42) expresiones_booleanas -> . rangos TRIPLE_IGUAL ENTERO
    (43) expresiones_booleanas -> . VARIABLE operadoresComparacion VARIABLE
    (44) expresiones_booleanas -> . VARIABLE operadoresComparacion valorNumerico
    (45) expresiones_booleanas -> . valorNumerico operadoresComparacion VARIABLE
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO
    (29) rangos -> . PARENTESIS_IZ soloEnteros TRES_PUNTOS soloEnteros PARENTESIS_DER

    VARIABLE        shift and go to state 56
    FLOTANTE        shift and go to state 24
    ENTERO          shift and go to state 19
    PARENTESIS_IZ   shift and go to state 57

    condicionIf                    shift and go to state 53
    expresiones_booleanas          shift and go to state 54
    valorNumerico                  shift and go to state 55
    rangos                         shift and go to state 18

state 23

    (47) funciones -> DEF . VARIABLE PARENTESIS_IZ PARENTESIS_DER END
    (48) funciones -> DEF . VARIABLE PARENTESIS_IZ argumentos PARENTESIS_DER END

    VARIABLE        shift and go to state 58


state 24

    (11) valorNumerico -> FLOTANTE .

    DOBLE_IGUAL     reduce using rule 11 (valorNumerico -> FLOTANTE .)
    DIFERENTE       reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MAYOR_QUE       reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MENOR_QUE       reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MENOR_IGUAL_QUE reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MAYOR_IGUAL_QUE reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MAS             reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MENOS           reduce using rule 11 (valorNumerico -> FLOTANTE .)
    DIVISION        reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MULTIPLICACION  reduce using rule 11 (valorNumerico -> FLOTANTE .)
    EXPONENCIACION  reduce using rule 11 (valorNumerico -> FLOTANTE .)
    MODULO          reduce using rule 11 (valorNumerico -> FLOTANTE .)
    $end            reduce using rule 11 (valorNumerico -> FLOTANTE .)
    PARENTESIS_DER  reduce using rule 11 (valorNumerico -> FLOTANTE .)
    ELSE            reduce using rule 11 (valorNumerico -> FLOTANTE .)
    ELSEIF          reduce using rule 11 (valorNumerico -> FLOTANTE .)
    END             reduce using rule 11 (valorNumerico -> FLOTANTE .)
    AND             reduce using rule 11 (valorNumerico -> FLOTANTE .)
    OR              reduce using rule 11 (valorNumerico -> FLOTANTE .)
    VARIABLE        reduce using rule 11 (valorNumerico -> FLOTANTE .)
    PRINT           reduce using rule 11 (valorNumerico -> FLOTANTE .)
    PUTS            reduce using rule 11 (valorNumerico -> FLOTANTE .)
    GETS            reduce using rule 11 (valorNumerico -> FLOTANTE .)
    LLAVE_IZ        reduce using rule 11 (valorNumerico -> FLOTANTE .)
    IF              reduce using rule 11 (valorNumerico -> FLOTANTE .)
    PARENTESIS_IZ   reduce using rule 11 (valorNumerico -> FLOTANTE .)
    FLOTANTE        reduce using rule 11 (valorNumerico -> FLOTANTE .)
    ENTERO          reduce using rule 11 (valorNumerico -> FLOTANTE .)
    COMA            reduce using rule 11 (valorNumerico -> FLOTANTE .)
    LLAVE_DER       reduce using rule 11 (valorNumerico -> FLOTANTE .)


state 25

    (23) operacionAritmetica -> expresionNumerica operadores . expresionNumerica
    (20) expresionNumerica -> . valorNumerico
    (21) expresionNumerica -> . operacionAritmetica
    (22) expresionNumerica -> . PARENTESIS_IZ operacionAritmetica PARENTESIS_DER
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO
    (23) operacionAritmetica -> . expresionNumerica operadores expresionNumerica

    PARENTESIS_IZ   shift and go to state 42
    FLOTANTE        shift and go to state 24
    ENTERO          shift and go to state 19

    expresionNumerica              shift and go to state 59
    valorNumerico                  shift and go to state 46
    operacionAritmetica            shift and go to state 60

state 26

    (14) operadores -> MAS .

    PARENTESIS_IZ   reduce using rule 14 (operadores -> MAS .)
    FLOTANTE        reduce using rule 14 (operadores -> MAS .)
    ENTERO          reduce using rule 14 (operadores -> MAS .)


state 27

    (15) operadores -> MENOS .

    PARENTESIS_IZ   reduce using rule 15 (operadores -> MENOS .)
    FLOTANTE        reduce using rule 15 (operadores -> MENOS .)
    ENTERO          reduce using rule 15 (operadores -> MENOS .)


state 28

    (16) operadores -> DIVISION .

    PARENTESIS_IZ   reduce using rule 16 (operadores -> DIVISION .)
    FLOTANTE        reduce using rule 16 (operadores -> DIVISION .)
    ENTERO          reduce using rule 16 (operadores -> DIVISION .)


state 29

    (17) operadores -> MULTIPLICACION .

    PARENTESIS_IZ   reduce using rule 17 (operadores -> MULTIPLICACION .)
    FLOTANTE        reduce using rule 17 (operadores -> MULTIPLICACION .)
    ENTERO          reduce using rule 17 (operadores -> MULTIPLICACION .)


state 30

    (18) operadores -> EXPONENCIACION .

    PARENTESIS_IZ   reduce using rule 18 (operadores -> EXPONENCIACION .)
    FLOTANTE        reduce using rule 18 (operadores -> EXPONENCIACION .)
    ENTERO          reduce using rule 18 (operadores -> EXPONENCIACION .)


state 31

    (19) operadores -> MODULO .

    PARENTESIS_IZ   reduce using rule 19 (operadores -> MODULO .)
    FLOTANTE        reduce using rule 19 (operadores -> MODULO .)
    ENTERO          reduce using rule 19 (operadores -> MODULO .)


state 32

    (26) asignacion -> VARIABLE IGUAL . expresionNumerica
    (27) asignacion -> VARIABLE IGUAL . CADENA
    (28) asignacion -> VARIABLE IGUAL . hashes
    (20) expresionNumerica -> . valorNumerico
    (21) expresionNumerica -> . operacionAritmetica
    (22) expresionNumerica -> . PARENTESIS_IZ operacionAritmetica PARENTESIS_DER
    (69) hashes -> . LLAVE_IZ elemento_hash LLAVE_DER
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO
    (23) operacionAritmetica -> . expresionNumerica operadores expresionNumerica

    CADENA          shift and go to state 62
    PARENTESIS_IZ   shift and go to state 42
    LLAVE_IZ        shift and go to state 21
    FLOTANTE        shift and go to state 24
    ENTERO          shift and go to state 19

    expresionNumerica              shift and go to state 61
    hashes                         shift and go to state 63
    valorNumerico                  shift and go to state 46
    operacionAritmetica            shift and go to state 60

state 33

    (43) expresiones_booleanas -> VARIABLE operadoresComparacion . VARIABLE
    (44) expresiones_booleanas -> VARIABLE operadoresComparacion . valorNumerico
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO

    VARIABLE        shift and go to state 64
    FLOTANTE        shift and go to state 24
    ENTERO          shift and go to state 19

    valorNumerico                  shift and go to state 65

state 34

    (51) funcionesEstructuras -> VARIABLE PUNTO . funcionesArray
    (52) funcionesEstructuras -> VARIABLE PUNTO . funcionesNumeros
    (49) funcionesArray -> . SORT
    (50) funcionesNumeros -> . TO_F

    SORT            shift and go to state 68
    TO_F            shift and go to state 69

    funcionesArray                 shift and go to state 66
    funcionesNumeros               shift and go to state 67

state 35

    (33) operadoresComparacion -> DOBLE_IGUAL .

    VARIABLE        reduce using rule 33 (operadoresComparacion -> DOBLE_IGUAL .)
    FLOTANTE        reduce using rule 33 (operadoresComparacion -> DOBLE_IGUAL .)
    ENTERO          reduce using rule 33 (operadoresComparacion -> DOBLE_IGUAL .)


state 36

    (34) operadoresComparacion -> DIFERENTE .

    VARIABLE        reduce using rule 34 (operadoresComparacion -> DIFERENTE .)
    FLOTANTE        reduce using rule 34 (operadoresComparacion -> DIFERENTE .)
    ENTERO          reduce using rule 34 (operadoresComparacion -> DIFERENTE .)


state 37

    (35) operadoresComparacion -> MAYOR_QUE .

    VARIABLE        reduce using rule 35 (operadoresComparacion -> MAYOR_QUE .)
    FLOTANTE        reduce using rule 35 (operadoresComparacion -> MAYOR_QUE .)
    ENTERO          reduce using rule 35 (operadoresComparacion -> MAYOR_QUE .)


state 38

    (36) operadoresComparacion -> MENOR_QUE .

    VARIABLE        reduce using rule 36 (operadoresComparacion -> MENOR_QUE .)
    FLOTANTE        reduce using rule 36 (operadoresComparacion -> MENOR_QUE .)
    ENTERO          reduce using rule 36 (operadoresComparacion -> MENOR_QUE .)


state 39

    (37) operadoresComparacion -> MENOR_IGUAL_QUE .

    VARIABLE        reduce using rule 37 (operadoresComparacion -> MENOR_IGUAL_QUE .)
    FLOTANTE        reduce using rule 37 (operadoresComparacion -> MENOR_IGUAL_QUE .)
    ENTERO          reduce using rule 37 (operadoresComparacion -> MENOR_IGUAL_QUE .)


state 40

    (38) operadoresComparacion -> MAYOR_IGUAL_QUE .

    VARIABLE        reduce using rule 38 (operadoresComparacion -> MAYOR_IGUAL_QUE .)
    FLOTANTE        reduce using rule 38 (operadoresComparacion -> MAYOR_IGUAL_QUE .)
    ENTERO          reduce using rule 38 (operadoresComparacion -> MAYOR_IGUAL_QUE .)


state 41

    (24) impresion -> PRINT PARENTESIS_IZ . expresionNumerica PARENTESIS_DER
    (25) impresion -> PRINT PARENTESIS_IZ . VARIABLE PARENTESIS_DER
    (30) impresion_vacia -> PRINT PARENTESIS_IZ . PARENTESIS_DER
    (20) expresionNumerica -> . valorNumerico
    (21) expresionNumerica -> . operacionAritmetica
    (22) expresionNumerica -> . PARENTESIS_IZ operacionAritmetica PARENTESIS_DER
    (11) valorNumerico -> . FLOTANTE
    (12) valorNumerico -> . ENTERO
    (23) operacionAritmetica -> . expresionNumerica operadores expresionNumerica

    VARIABLE        shift and go to state 72
    PARENTESIS_DER  shift and go to state 71
    PARENTESIS_IZ   shift and go to state 42
    FLOTANTE        shift and go to state 24
    ENTERO          shift and go to state 19

    expresionNumerica              shift and go to state 70
    valorNumerico                  shift and go to state 46
    operacionAritmetica            shift and go to state 60

state 42
